--- a/dss_jjw2.css
+++ b/dss_jjw2.css
@@ -45,7 +45,7 @@ div.photo1
 }
 div.controlbg1
 {
-    background-color: #293E6A;
+           background-color: #293E6A;
            position: absolute;
            display: block;
            width: 350px;
@@ -56,7 +56,7 @@ div.controlbg1
 }
 div.controlbg2
 {
-        background-color: #77BA9B;
+           background-color: #77BA9B;
            position: absolute;
            display: block;
            width: 350px;
@@ -65,7 +65,7 @@ div.controlbg2
            margin-top: -50px;
 }
 div.col1, div.col2, div.col3 {
-    display: inline-block;
+           display: inline-block;
 }
 div.col1
 {
@@ -102,7 +102,7 @@ p.dir
 p.title
 {
 	color:#639BF1;
-	font-size: 1.3em;
+	font-size: 130%;
 	font-weight: 900;
 	margin-left: 30px;
     
@@ -112,7 +112,7 @@ p.title
 p #jpublisher
 {
 	color:#639BF1;
-	font-size: 1.3em;
+	font-size: 100%;
 	font-weight: 900;
 	float: right;
 	margin-right: 30px;
